# data-analyst-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: block-dangerous-git.sh
docs/: DESIGN.md  HANDOFF-frontend.md  SCOPE.md  langgraph-graph-explicite-vs-helpers.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  events.ts  styles.css
frontend/src/components/: DataTable.tsx  ReasoningPanel.tsx  ResultPanel.tsx  Sql.tsx  StatusBadge.tsx
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
notes/: langgraph-graph-explicite-vs-helpers.md  rapport-implementation.md
src/data_analyst_agent/: response.py
src/data_analyst_agent/agent/: __init__.py  events.py  graph.py  prompt.py  tools.py
src/data_analyst_agent/agent/dialects/: ansi.md  postgres.md  sqlite.md
src/data_analyst_agent/api/: __init__.py  __main__.py  app.py  translate.py
src/data_analyst_agent/db/: __init__.py  base.py  result.py  sqlite.py
src/data_analyst_agent/model/: __init__.py  mistral.py
src/eval/: __init__.py  golden_set.py  run.py  scorer.py
