[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analyst-agent"
version = "0.1.0"
description = "Agent autonome qui répond en langage naturel sur une base SQL (lecture seule) via une boucle ReAct outillée."
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-mistralai>=0.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
# Couche HTTP (DESIGN §9). SSE fait maison → pas de sse-starlette. Installer avec
#   pip install -e ".[api]"
api = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
